re PR lto/48492 (LTO bootstrap failure in copy_constant)

PR lto/48492
	* cfgexpand.c (expand_debug_expr) <VAR_DECL>: Return NULL for a
	DECL_IN_CONSTANT_POOL without RTL.

From-SVN: r172641